# gpflow_to_gpjax

./: pyproject.toml
project_name/: custom_sample_approx.py  inv_tesy.py  main_test.py  main_test_2.py  pathwise_gp.py
project_name/acq/: acquisition.py
project_name/alg/: mpc.py
project_name/envs/: __init__.py
project_name/examples/batch_algo/: test_batch_gpfs.py
project_name/examples/gpflow/: test_batch_algo.py
project_name/examples/multioutput/: test_multigpfsgp.py
project_name/models/: gpjax_gp.py
project_name/policies/: __init__.py
