[project]
name = "gpflow_to_gpjax"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "james_dell", email = "james.rudd.jones@gmail.com"},
]
dependencies = [
    "gpflow==2.5.2",
    "gym>=0.26.2",
    "matplotlib>=3.10.0",
    "keras==2.10.0",
    "tensorflow-probability==0.18.0",
    "neatplot>=0.1.0",
    "jax==0.3.17",
    "jaxlib==0.3.15",
    "scipy<=1.12.0,>=1.6.0",
    "tqdm>=4.67.1",
    "colorednoise>=2.2.0",
    "gpjax>=0.5.5",
    "mogpjax>=0.0.2",
    "pandas>=2.2.3",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


 [build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

 [[tool.pdm.source]]
 name = "jax_cuda"
 url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
 verify_ssl = true
 type = "find_links"